@@ -1,3 +1,8 @@
+2010-09-22 Borut Razem <borut.razem AT siol.net>
+
+	* device/include/mcs51/XC866.h, device/include/mcs51/reg764.h:
+	  sdcc library license changed to GPL+LE
+
 2010-09-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/doc/sdccman.lyx:
